[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/art/enemies/chaman/Ataque_chaman_1.PNG" type="Texture" id=1]
[ext_resource path="res://assets/art/enemies/chaman/Ataque_chaman_2.PNG" type="Texture" id=2]
[ext_resource path="res://assets/art/enemies/chaman/Idle_chaman_2.PNG" type="Texture" id=3]
[ext_resource path="res://assets/art/enemies/chaman/Idle_chaman_1.PNG" type="Texture" id=4]
[ext_resource path="res://src/Actors/ShootingEnemy.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 437, 625 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 437, 625 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 437, 625 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 437, 625 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 141, 218 )

[sub_resource type="CircleShape2D" id=7]
radius = 1044.43

[node name="ShootingEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 68 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
